--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: book_store_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -33,9 +33,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-   # Responsive sizing
-
+  cupertino_icons:
+    ^1.0.8
+    # Responsive sizing
 
   # Google Fonts (optional for nice typography)
   google_fonts: ^6.2.1
@@ -47,16 +47,19 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.4
-  intl: ^0.19.0   # ✅ add this line 
+  intl: ^0.19.0 # ✅ add this line
 
   provider: ^6.1.2
-  fluttertoast: ^8.2.8
+  fluttertoast:
+    ^8.2.8
 
     # Social Auth
   google_sign_in: ^6.3.0
   flutter_facebook_auth: ^6.0.0
 
   image_picker: ^0.8.7
+  flutter_launcher_icons: ^0.14.4
+  flutter_native_splash: ^2.4.6
 
 dev_dependencies:
   flutter_test:
@@ -75,8 +78,10 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
+    - assets/icons/Bookstore.png
+    - assets/icons/Logo.png
     - assets/icons/google.png
-    
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -112,3 +117,21 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "./assets/icons/Bookstore.png"
+
+  adaptive_icon_background: "#ffffff" # or a path to a background image
+  adaptive_icon_foreground: "./assets/icons/Logo.png"
+
+flutter_native_splash:
+  color: "#ffffff" # background color of splash screen
+  image: ./assets/icons/Bookstore.png # your logo (PNG recommended)
+  android: true
+  ios: true
+  fullscreen: true
+  web: true
+  color_dark: "#000000"
+  image_dark: ./assets/icons/Bookstore.png
